--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-Hello world
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+<button onclick="getLocation()">click</button>
+<script type="text/javascript">
+  var geoSuccess = function(position) {
+    startPos = position;
+    document.getElementById('startLat').innerHTML = startPos.coords.latitude;
+    document.getElementById('startLon').innerHTML = startPos.coords.longitude;
+  };
+  var geoError = function(position) {
+    console.log('Error occurred. Error code: ' + error.code);
+    // error.code can be:
+    //   0: unknown error
+    //   1: permission denied
+    //   2: position unavailable (error response from location provider)
+    //   3: timed out
+  };
+	navigator.geolocation.getCurrentPosition(geoSuccess, geoError);
+
+</script>
+</body>
+</html>
