--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     document.getElementById('startLat').innerHTML = startPos.coords.latitude;
     document.getElementById('startLon').innerHTML = startPos.coords.longitude;
   };
-  var geoError = function(position) {
+  var geoError = function(error) {
     console.log('Error occurred. Error code: ' + error.code);
     // error.code can be:
     //   0: unknown error
@@ -19,8 +19,7 @@
     //   2: position unavailable (error response from location provider)
     //   3: timed out
   };
-	
-var getLocation = function(){
+ function getLocation(){
 		navigator.geolocation.getCurrentPosition(geoSuccess, geoError);
 
 };
