--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <button onclick="getLocation()">click</button>
 <script type="text/javascript">
   var geoSuccess = function(position) {
-	  document.write(position.coords.latitude + " / " + position.coords.longitude; 
+	  document.write(position.coords.latitude + " / " + position.coords.longitude); 
 
   };
   var geoError = function(error) {
