--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="initial-scale=1.0,user-scalable=no" />
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
 </head>
 <body>
 <p>你的位置为： <span id="description"></span></p>
