--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta name="viewport" content="initial-scale=1.0,user-scalable=no" />
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
-<script type="text/javascript" src="http://api.baidu.com/api?v=2.0&ak=FPKDtfSA7WBlEmt9lpvEhmfP"></script>
+<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=FPKDtfSA7WBlEmt9lpvEhmfP"></script>
 </head>
 <body>
 <p>你的位置为： <span id="description"></span></p>
