--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <p>你的位置为： <span id="description"></span></p>
-<div id="map"></div>
+<div id="map" style="width: 100%;height: 100%;margin: 0;overflow: hidden"></div>
 
 </body>
 </html>
