--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ var showMap = function(lon,lat){
 };
 
 var showDescription = function(lon,lat){
-	var geoCoder = new BMap.GeoCoder();
+	var geoCoder = new BMap.Geocoder();
 
 	//现在所在位置
 	var point = new BMap.Point(lon.lat);
