--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script type="text/javascript">
 var showMap = function(lon,lat){
 	//现在所在位置
-	var point = new BMap.Point(lon.lat);
+	var point = new BMap.Point(lon,lat);
 
 	//地图
 	var map = new BMap.Map("map");
@@ -35,7 +35,7 @@ var showDescription = function(lon,lat){
 	var geoCoder = new BMap.Geocoder();
 
 	//现在所在位置
-	var point = new BMap.Point(lon.lat);
+	var point = new BMap.Point(lon,lat);
 	geoCoder.getLocation(point,function(result){
 		var locationString = result.address;
 		document.getElementById("description").innerText = locationString;
