--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
 </html>
 <script type="text/javascript">
 
-//微信的标题栏会导致地图控件偏下，所以要缩短一点body的高度
-document.body.style.height = window.innerHeight - 100 + "px";
-
 var showMap = function(lon,lat){
 	//现在所在位置
 	var point = new BMap.Point(lon,lat);
@@ -28,6 +25,9 @@ var showMap = function(lon,lat){
 	var circle = new BMap.Circle(point, 20);
 	circle.setFillColor("#7db6c4");
 	map.addOverlay(circle);
+
+	//在微信上，微信上面有一个标题栏会导致地图控件偏下，所以要缩短一点body的高度
+	document.body.style.height = window.innerHeight - 100 + "px";
 };
 
 var showDescription = function(lon,lat){
@@ -52,4 +52,5 @@ var geoError = function(position) {
 };
 
 navigator.geolocation.getCurrentPosition(geoSuccess, geoError);
+
 </script>
