--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
 </head>
 <body>
 <p>你的位置为： <span id="description"></span></p>
-<div id="map" style="width: 100%;margin: 0;overflow: hidden"></div>
+<div id="map" style="width: 100%;height: 100%;margin: 0;overflow: hidden"></div>
 
 </body>
 </html>
 <script type="text/javascript">
-
 var showMap = function(lon,lat){
-
-
 	//现在所在位置
 	var point = new BMap.Point(lon,lat);
 
@@ -22,15 +19,13 @@ var showMap = function(lon,lat){
 	var map = new BMap.Map("map");
 	map.centerAndZoom(point,15);
 	var navigationControl = new BMap.NavigationControl();
+	navigationControl.setAnchor(BMAP_ANCHOR_TOP_RIGHT);
+	map.addControl(navigationControl);
 
 	//圆点，表示现在所在地
-	var circle = new BMap.Circle(point, 20);
+	var circle = new BMap.Circle(point, 50);
 	circle.setFillColor("#7db6c4");
 	map.addOverlay(circle);
-
-	//得到设备屏幕高度，把地图显示的范围改小一点。（因为上面有微信的标题栏和手机的状态栏，地图的控件会显示不全）
-	var screenHeight = window.innerHeight;
-	document.getElementById("map").style.height = screenHeight - 64 + "px";
 };
 
 var showDescription = function(lon,lat){
