--- a/index.html
+++ b/index.html
@@ -1,122 +1,47 @@
-<!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+<meta name="viewport" content="initial-scale=1.0,user-scalable=no" />
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
+<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=FPKDtfSA7WBlEmt9lpvEhmfP"></script>
 </head>
 <body>
-<p>UNDO REDO demo</p>
-<div id="app">
-    <template v-for="(caption,index) in captions">
-        <div>
-            <span v-text="caption.start"></span>
-            <textarea v-model="caption.content" v-on:keydown="handleKeydown($event,index)"></textarea>
-            <span v-text="caption.end"></span>
-        </div>
-    </template>
-    <button v-on:click="undo">undo</button>
-    <button v-on:click="redo">redo</button>
-</div>
-<script type="text/javascript" src="https://unpkg.com/vue@2.2.4/dist/vue.js"></script>
-<script type="text/javascript">
-// the function for copying object
-function copy(object){
-    return JSON.parse(JSON.stringify(object));
-}
+<p>你的位置为： <span id="description"></span></p>
+<div id="map" style="width: 100%;height: 100%;margin: 0;overflow: hidden"></div>
 
-// a simple command recorder
-var logger = {
-    commands: [],
-    cursor: 0,
-    record: function(cmd){
-        this.commands.push(cmd);
-        this.cursor++;
-    },
-    getUndo: function(){
-        return this.commands[--this.cursor];
-    },
-    getRedo: function(){
-        return this.commands[this.cursor++];
-    }
-};
-
-var app = new Vue({
-    el: "#app",
-    data:{
-        captions: [
-            {
-                start: 0,
-                content: "transcendentalism",
-                end: 15
-            },
-            {
-                start: 15,
-                content: "encyclopaedia",
-                end: 30
-            },
-            {
-                start: 30,
-                content: "otolaryngologist",
-                end: 45
-            }
-        ]
-    },
-    methods: {
-        handleKeydown: function(e, i){
-            if(e.key == "Enter"){
-                e.preventDefault();
-                var position = e.target.selectionStart;
-                this.record(position, i);
-                this.segment(position, i);
-            }
-        },
-        record: function(pos, i){
-            logger.record({
-                // the value-type data can be kept in logger with no problem.
-                position: pos,
-                index: i,
-
-                // It seems that the reference-type, even deep copied, can still respond to the Vue data model changes
-                current: copy(this.captions[i]),
-                next: copy(this.captions[i + 1]),
-            });
-        },
-        segment: function(pos, i){
-            var current = this.captions[i];
-            var oldEnd = current.end;
-            var newEnd = Math.floor((current.start + current.end) / 2);
-            var textBefore = current.content.slice(0, pos);
-            var textAfter = current.content.slice(pos);
-
-            // update
-            this.captions[i].content = textBefore;
-            this.captions[i].end = newEnd;
-
-            // insert
-            var newCaption = {
-                start: newEnd,
-                content: textAfter,
-                end: oldEnd
-            };
-            this.captions.splice(i + 1, 0, newCaption);
-        },
-        undo: function(){
-            var cmd = logger.getUndo();
-            // undo logic
-            var current = cmd.current;
-            var index = cmd.index;
-
-            this.captions[index] = current;
-            this.captions.splice(index + 1, 1);
-        },
-        redo: function(){
-            var cmd  = logger.getRedo();
-            var index = cmd.index;
-            var position = cmd.position;
-
-            this.segment(position,index);
-        }
-    }
-});
-</script>
 </body>
 </html>
+<script type="text/javascript">
+var showMap = function(lon,lat){
+	//现在所在位置
+	var point = new BMap.Point(lon,lat);
+	//地图
+	var map = new BMap.Map("map");
+	map.centerAndZoom(point,15);
+	var navigationControl = new BMap.NavigationControl();
+	navigationControl.setAnchor(BMAP_ANCHOR_TOP_RIGHT);
+	map.addControl(navigationControl);
+	//圆点，表示现在所在地
+	var circle = new BMap.Circle(point, 50);
+	circle.setFillColor("#7db6c4");
+	map.addOverlay(circle);
+};
+var showDescription = function(lon,lat){
+	var geoCoder = new BMap.Geocoder();
+	//现在所在位置
+	var point = new BMap.Point(lon,lat);
+	geoCoder.getLocation(point,function(result){
+		var locationString = result.address;
+		document.getElementById("description").innerText = locationString;
+	});
+};
+var geoSuccess = function(position) {
+	var lon = position.coords.longitude;
+	var lat = position.coords.latitude;
+	showMap(lon,lat);
+	showDescription(lon,lat);
+};
+var geoError = function(position) {
+	console.log('Error occurred. Error code: ' + error);
+};
+navigator.geolocation.getCurrentPosition(geoSuccess, geoError);
+</script>
