--- a/index.html
+++ b/index.html
@@ -1,47 +1,1 @@
-<html>
-<head>
-<meta name="viewport" content="initial-scale=1.0,user-scalable=no" />
-<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
-<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=FPKDtfSA7WBlEmt9lpvEhmfP"></script>
-</head>
-<body>
-<p>你的位置为： <span id="description"></span></p>
-<div id="map" style="width: 100%;height: 100%;margin: 0;overflow: hidden"></div>
-
-</body>
-</html>
-<script type="text/javascript">
-var showMap = function(lon,lat){
-	//现在所在位置
-	var point = new BMap.Point(lon,lat);
-	//地图
-	var map = new BMap.Map("map");
-	map.centerAndZoom(point,15);
-	var navigationControl = new BMap.NavigationControl();
-	navigationControl.setAnchor(BMAP_ANCHOR_TOP_RIGHT);
-	map.addControl(navigationControl);
-	//圆点，表示现在所在地
-	var circle = new BMap.Circle(point, 50);
-	circle.setFillColor("#7db6c4");
-	map.addOverlay(circle);
-};
-var showDescription = function(lon,lat){
-	var geoCoder = new BMap.Geocoder();
-	//现在所在位置
-	var point = new BMap.Point(lon,lat);
-	geoCoder.getLocation(point,function(result){
-		var locationString = result.address;
-		document.getElementById("description").innerText = locationString;
-	});
-};
-var geoSuccess = function(position) {
-	var lon = position.coords.longitude;
-	var lat = position.coords.latitude;
-	showMap(lon,lat);
-	showDescription(lon,lat);
-};
-var geoError = function(position) {
-	console.log('Error occurred. Error code: ' + error);
-};
-navigator.geolocation.getCurrentPosition(geoSuccess, geoError);
-</script>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"><link href=/css/app.f8aae94a.css rel=preload as=style><link href=/css/chunk-vendors.23d90689.css rel=preload as=style><link href=/js/app.2ddc2347.js rel=preload as=script><link href=/js/chunk-vendors.724560b4.js rel=preload as=script><link href=/css/chunk-vendors.23d90689.css rel=stylesheet><link href=/css/app.f8aae94a.css rel=stylesheet></head><body><div id=app></div><script src=https://mdn.github.io/webgl-examples/tutorial/gl-matrix.js></script><script src=/js/chunk-vendors.724560b4.js></script><script src=/js/app.2ddc2347.js></script></body></html>
