--- a/ffoutput/index.html
+++ b/ffoutput/index.html
@@ -1,1 +1,10 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><title>client</title><link href=/ffoutput/css/app.66d47f9f.css rel=preload as=style><link href=/ffoutput/js/app.845b8302.js rel=preload as=script><link href=/ffoutput/js/chunk-vendors.9e426e49.js rel=preload as=script><link href=/ffoutput/css/app.66d47f9f.css rel=stylesheet></head><body><noscript><strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/ffoutput/js/chunk-vendors.9e426e49.js></script><script src=/ffoutput/js/app.845b8302.js></script></body></html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><title>client</title><link href=/ffoutput/css/app.66d47f9f.css rel=preload as=style><link href=/ffoutput/js/app.2d4646c0.js rel=preload as=script><link href=/ffoutput/js/chunk-vendors.9e426e49.js rel=preload as=script><link href=/ffoutput/css/app.66d47f9f.css rel=stylesheet></head><body><noscript><strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><script>if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('./sw.js')
+        .then((reg) => {
+          // registration worked
+          console.log('Registration succeeded. Scope is ' + reg.scope);
+        }).catch((error) => {
+          // registration failed
+          console.log('Registration failed with ' + error);
+        });
+      }</script><div id=app></div><script src=/ffoutput/js/chunk-vendors.9e426e49.js></script><script src=/ffoutput/js/app.2d4646c0.js></script></body></html>
