--- a/artwxz/index.html
+++ b/artwxz/index.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>www.artwxz.com</title>
-  <link href="/css.css" rel="stylesheet" type="text/css" />
+  <link href="/artwxz/css.css" rel="stylesheet" type="text/css" />
   <script type="text/javascript">
     <!--
     function MM_swapImgRestore() { //v3.0
@@ -139,7 +139,7 @@
   </script>
 </head>
 
-<body onload="MM_preloadImages('img/i1_r3_c3.gif','img/i1_r3_c4.gif','img/i1_r3_c5.gif','img/i1_r3_c6.gif')">
+<body onload="MM_preloadImages('artwxz/img/i1_r3_c3.gif','artwxz/img/i1_r3_c4.gif','artwxz/img/i1_r3_c5.gif','artwxz/img/i1_r3_c6.gif')">
   <!-- BEGIN WAYBACK TOOLBAR INSERT -->
 </body>
 <p>&nbsp;</p>
@@ -148,37 +148,37 @@
     <td height="450" valign="top">
       <table width="100%" border="0" cellpadding="0" cellspacing="0" bgcolor="#d3b581">
         <tr>
-          <td width="30" style="height:414px;display:block"><img src="/img/i_r1_c1.gif" width="30" height="414" /></td>
+          <td width="30" style="height:414px;display:block"><img src="/artwxz/img/i_r1_c1.gif" width="30" height="414" /></td>
           <td valign="top">
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr>
-                <td bgcolor="#C8A472" style="display:block;height:17px"><img src="/img/i_r1_c2.gif" height="17" /></td>
+                <td bgcolor="#C8A472" style="display:block;height:17px"><img src="/artwxz/img/i_r1_c2.gif" height="17" /></td>
               </tr>
               <tr>
                 <td height="395">
                   <!--焦点图片开始-->
                   <div id="oTransContainer" style="FILTER: progid:DXImageTransform.Microsoft.Wipe(GradientSize=1.0, wipeStyle=0, motion='forward');overflow: hidden; WIDTH: 739px; HEIGHT: 396px">
-                    <a target="_blank"><img class="slide" height="396" src="/img/pop1.jpg" width="739" border="0"></a>
-                    <a target="_blank"><img class="slide" height="396" src="/img/pop2.jpg" width="739" border="0"></a>
-                    <a target="_blank"><img class="slide" height="396" src="/img/pop3.jpg" width="739" border="0"></a>
-                    <a target="_blank"><img class="slide" height="396" src="/img/pop4.jpg" width="739" border="0"></a>
-                    <a target="_blank"><img class="slide" height="396" src="/img/pop5.jpg" width="739" border="0"></a>
+                    <a target="_blank"><img class="slide" height="396" src="/artwxz/img/pop1.jpg" width="739" border="0"></a>
+                    <a target="_blank"><img class="slide" height="396" src="/artwxz/img/pop2.jpg" width="739" border="0"></a>
+                    <a target="_blank"><img class="slide" height="396" src="/artwxz/img/pop3.jpg" width="739" border="0"></a>
+                    <a target="_blank"><img class="slide" height="396" src="/artwxz/img/pop4.jpg" width="739" border="0"></a>
+                    <a target="_blank"><img class="slide" height="396" src="/artwxz/img/pop5.jpg" width="739" border="0"></a>
                   </div>
                   <!--焦点图片结束-->
                 </td>
               </tr>
             </table>
           </td>
-          <td width="16" style="height:414px;display:block"><img src="/img/i_r1_c9.gif" width="16" height="414" /></td>
+          <td width="16" style="height:414px;display:block"><img src="/artwxz/img/i_r1_c9.gif" width="16" height="414" /></td>
         </tr>
       </table>
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td style="display:flex"><img src="/img/i_r3_c1.gif" width="30" height="43" /><img src="/img/i_r3_c2.gif" width="164" height="43" />
-            <a onfocus="if(this.blur)this.blur()"><img src="/img/i_r3_c3.gif" name="Image8" width="102" height="43" border="0" id="Image8" /></a>
-            <a onfocus="if(this.blur)this.blur()"><img src="/img/i_r3_c4.gif" name="Image9" width="105" height="43" border="0" id="Image9" /></a>
-            <a onfocus="if(this.blur)this.blur()"><img src="/img/i_r3_c5.gif" name="Image10" width="105" height="43" border="0" id="Image10" /></a>
-            <a onfocus="if(this.blur)this.blur()"><img src="/img/i_r3_c6.gif" name="Image11" width="98" height="43" border="0" id="Image11" /></a><img src="/img/i_r3_c7.gif" height="43" /><img src="/img/i_r3_c9.gif" width="16" height="43" /></td>
+          <td style="display:flex"><img src="/artwxz/img/i_r3_c1.gif" width="30" height="43" /><img src="/artwxz/img/i_r3_c2.gif" width="164" height="43" />
+            <a onfocus="if(this.blur)this.blur()"><img src="/artwxz/img/i_r3_c3.gif" name="Image8" width="102" height="43" border="0" id="Image8" /></a>
+            <a onfocus="if(this.blur)this.blur()"><img src="/artwxz/img/i_r3_c4.gif" name="Image9" width="105" height="43" border="0" id="Image9" /></a>
+            <a onfocus="if(this.blur)this.blur()"><img src="/artwxz/img/i_r3_c5.gif" name="Image10" width="105" height="43" border="0" id="Image10" /></a>
+            <a onfocus="if(this.blur)this.blur()"><img src="/artwxz/img/i_r3_c6.gif" name="Image11" width="98" height="43" border="0" id="Image11" /></a><img src="/artwxz/img/i_r3_c7.gif" height="43" /><img src="/artwxz/img/i_r3_c9.gif" width="16" height="43" /></td>
         </tr>
       </table>
     </td>
